resources/sbns2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox-s987654
  labels:
    name: sandbox-s987654
