resources/resource_ro_rootfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ro-rootfs
  labels:
    app: myapp
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
    securityContext:
      readOnlyRootFilesystem: true
