resources/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: sandbox-s123456
  labels:
    name: mypod
spec:
  containers:
  - name: mypod
    image: nginx
    securityContext:
      privileged: false
      readOnlyRootFilesystem: true
  securityContext:
    runAsNonRoot: false
