resources/load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-lb
  namespace: default
spec:
  selector:
    app: example
  ports:
    - port: 8765
      targetPort: 9376
  type: LoadBalancer
